# ascertain-submission

./: .env.development  .env.production  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  notes.md  pyproject.toml  wait-for-it.sh
init-scripts/: 01-init.sql  02-llm-cache.sql
src/: config.py  database.py  dependencies.py  main.py
src/models/: document.py  llm_cache.py
src/repositories/: document.py  llm_cache.py
src/schemas/: clinical_note.py  document.py  llm.py  llm_cache.py
src/services/: clinical_note_agent.py  example_store.py  fhir_conversion_service.py  llm_service.py  medical_code_service.py
tests/: conftest.py  test_clinical_note_agent_e2e.py  test_documents.py  test_example_store.py  test_fhir_conversion.py  test_llm_service.py  test_medical_code_tools.py  test_sequential_extract_and_fhir.py
